--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -59,11 +59,34 @@ canvas {
   	max-height: 99vh;  
 }
 
+/* Scroll bars */
+/* width */
+::-webkit-scrollbar {
+    width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 5px grey; 
+    border-radius: 6px;
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: silver; 
+    border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: green; 
+}
+
 .log-network {
   position: absolute;
-  right: 0;
+  left: 0;
   top: 0;
-  height: 300px;
+  width: 480px;
 }
 
 .logger {
@@ -74,21 +97,57 @@ canvas {
   overflow: auto;
 }
 
+.log-chat {
+  position: absolute;
+  top: 12%;
+  height: 160px !important;
+  width: 100%;
+  overflow: auto;
+  margin-top: 63px;
+}
+
+.textMessageNode {
+  word-break: break-all;
+}
+
+.new-message {
+  width: 100%;
+  float: left;
+}
+
+.user-info {
+  width: auto;
+  float: left;
+}
+
+.user-info img {
+  padding-top: 1px;
+  width: 55px;
+  height: 55px;
+}
+
+.whoIsTyping {
+  position: absolute;
+  left: 45%;
+  top: 1%;
+  height: 50px;
+  overflow: auto;
+}
+
 .webCamView {
-  border: solid red;
+  position: absolute;
   background: transparent;
-  width: 640px;
-  height: 480px;
+  width: 33%;
+  bottom: 0;
 }
 
 .controls {
   margin: auto;
   position: absolute;
-  float:left;
+  padding-left: 28px;
   right: 0;
   background: transparent;
-  width: 110px;
-  height: 440px;
+  width: 111px;
 }
 
 .controls span {
@@ -96,9 +155,40 @@ canvas {
 }
 
 .icon {
-  width: 80px;
-  height: 80px;
+  width: 45px;
+  height: 45px;
   vertical-align:bottom !important;
+}
+
+.chatIcon {
+  width: 35px;
+  height: 35px;
+}
+
+.myButton {
+	-moz-box-shadow: 0px 0px 11px 3px #3dc21b;
+	-webkit-box-shadow: 0px 0px 11px 3px #3dc21b;
+	box-shadow: 0px 0px 11px 3px #3dc21b;
+	background-color:#44c767;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid #18ab29;
+	display:inline-block;
+	cursor:pointer;
+	color:#ffffff;
+	font-family:Arial;
+	font-size:17px;
+	padding:5px 33px;
+	text-decoration:none;
+	text-shadow:0px 1px 8px #2f6627;
+}
+.myButton:hover {
+	background-color:#5cbf2a;
+}
+
+.myButton input {
+    width: 170px;
 }
 
 #allow-webcam {
