--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -54,9 +54,9 @@ canvas {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column;
-    height: 99vmin;  
-  	max-width: 99vw; 
-  	max-height: 99vh;  
+    height: 99vmin;
+  	max-width: 99vw;
+  	max-height: 99vh;
 }
 
 /* Scroll bars */
@@ -67,19 +67,19 @@ canvas {
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey; 
+    box-shadow: inset 0 0 5px grey;
     border-radius: 6px;
 }
- 
+
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    background: silver; 
+    background: silver;
     border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-    background: green; 
+    background: green;
 }
 
 .log-network {
@@ -187,8 +187,28 @@ canvas {
 	background-color:#5cbf2a;
 }
 
-.myButton input {
-    width: 170px;
+.myError {
+  display: none;
+	-moz-box-shadow: 0px 0px 11px 3px darkred;
+	-webkit-box-shadow: 0px 0px 11px 3px darkred;
+	box-shadow: 0px 0px 11px 3px darkred;
+	background-color:darkred;
+	-moz-border-radius:28px;
+	-webkit-border-radius:28px;
+	border-radius:28px;
+	border:1px solid red;
+	cursor:pointer;
+	color:lightcoral;
+	font-family:Arial;
+	font-size:17px;
+	padding:5px 33px;
+	text-decoration:none;
+  text-shadow:0px 1px 8px #14151f;
+  width: 100%;
+}
+.myError:hover {
+  background-color:lightcoral;
+  color:white;
 }
 
 #allow-webcam {
@@ -219,3 +239,189 @@ canvas {
   background-position-x: center;
   background-position-y: top;
 }
+
+/**
+  DOM Components CSS
+  - register form
+  - login form
+*/
+.popup {
+  position: absolute;
+  margin: 0;
+  left : 0;
+  top: 0;
+  width: 99.5vw;
+  height: 100%;
+  box-shadow: 0 -20px 150px -20px rgba(0, 0, 0, 0.5);
+  z-index: 200;
+}
+
+ .container{
+  display: block;
+  position: relative;
+  z-index: 0;
+  margin: 1rem auto 0;
+  padding: 2rem 1rem 0 1rem;
+  width: 100%;
+  max-width: 700px;
+  height: auto;
+  box-shadow: 0px 20px 70px -20px rgba(0, 0, 0, 0.8);
+  border-radius: 20px;
+}
+
+.container:after{
+  content: '';
+  display: inline-block;
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background-image: radial-gradient(ellipse at left bottom, rgba(134, 9, 9, 1) 0%, rgba(150, 15, 15, 0.9) 60%, rgba(159, 14, 14, 0.9) 100%);
+  box-shadow: 0 -20px 150px -20px rgba(0, 0, 0, 0.5);
+  border-radius: 20px;
+}
+
+.form-app{
+  position: relative;
+  z-index: 1;
+  padding-bottom: 4.5rem;
+  border-bottom: 1px solid rgba(255,255,255, 0.25);
+}
+
+.nav{
+  position: relative;
+  padding: 0;
+  margin: 0 0 6em 1rem;
+}
+
+.nav-item{
+  list-style: none;
+  display: inline-block;
+}
+
+.nav-item + .nav-item{
+  margin-left: 2.25rem;
+}
+
+.nav-item a{
+  position: relative;
+  color: rgba(255, 255, 255, 0.5);
+  text-decoration: none;
+  text-transform: uppercase;
+  font-weight: 500;
+  font-size: 1.25rem;
+  padding-bottom: .5rem;
+  transition: .20s all ease;
+}
+
+.nav-item.active a, .nav-item a:hover{
+  color: #FFFFFF;
+  transition: .15s all ease;
+}
+
+.nav-item a:after{
+  content: '';
+  display: inline-block;
+  height: 10px;
+  background-color: rgb(255, 255, 255);
+  position: absolute;
+  right: 100%;
+  bottom: -1px;
+  left: 0;
+  border-radius: 50%;
+  transition: .15s all ease;
+}
+
+.nav-item a:hover:after, .nav-item.active a:after{
+  background-color: rgb(208, 183, 181);
+  height: 2px;
+  right: 0;
+  bottom: 2px;
+  border-radius: 0;
+  transition: .20s all ease;
+}
+
+.form-label, .form-checkbox-label{
+  color: rgba(255, 255, 255, 0.5);
+  text-transform: uppercase;
+  font-size: .75rem;
+  margin-bottom: 1rem;
+}
+
+.form-checkbox-label{
+  display: inline-block;
+  position: relative;
+  padding-left: 1.5rem;
+  margin-top: 2rem;
+  margin-left: 1rem;
+  color: #FFFFFF;
+  font-size: .75rem;
+  text-transform: inherit;
+}
+
+.form-input-text{
+  color: white;
+  font-size: 1.15rem;
+  width: 100%;
+  padding: .5rem 1rem;
+  border: 2px solid transparent;
+  outline: none;
+  border-radius: 1.5rem;
+  background-color: rgba(255, 255, 255, 0.25);
+  letter-spacing: 1px;
+}
+
+.form-input-text:hover,
+.form-input-text:focus{
+	color: white;
+	border: 2px solid rgba(255, 255, 255, 0.5);
+	background-color: transparent;
+}
+
+.form-input-text + .form-label {
+	margin-top: 1.5rem;
+}
+
+.form-input-checkbox {
+	position: absolute;
+	top: .1rem;
+	left: 0;
+	margin: 0;
+}
+
+.login-button {
+	color: #ffffff;
+	font-size: 1rem;
+	font-family: 'Montserrat', sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	margin-top: 1rem;
+	padding: .75rem;
+	border-radius: 2rem;
+	display: block;
+	width: 100%;
+	background-color: rgba(237, 17, 17, 0.75);
+	border: none;
+	cursor: pointer;
+}
+
+.login-button:hover {
+	background-color: rgba(237, 17, 17, 1);
+}
+
+.link {
+	display: block;
+	text-align: center;
+	color: rgba(255, 255, 255, 0.75);
+	font-size: .75rem;
+	text-decoration: none;
+	position: relative;
+	z-index: 1;
+}
+
+.link:hover {
+	color: rgb(235, 53, 53);
+}
+
