--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -261,7 +261,7 @@ canvas {
   position: relative;
   z-index: 0;
   margin: 1rem auto 0;
-  padding: 2rem 1rem 0 1rem;
+  padding: 2rem 1rem 1rem 1rem;
   width: 100%;
   max-width: 700px;
   height: auto;
@@ -393,7 +393,7 @@ canvas {
 
 .login-button {
 	color: #ffffff;
-	font-size: 1rem;
+	font-size: 18px;
 	font-family: 'Montserrat', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 1px;
@@ -414,14 +414,15 @@ canvas {
 .link {
 	display: block;
 	text-align: center;
-	color: rgba(255, 255, 255, 0.75);
-	font-size: .75rem;
+  color:white;
+  background-color: rgba(237, 17, 17, 0.75);
+	font-size: 16px;
 	text-decoration: none;
 	position: relative;
 	z-index: 1;
 }
 
 .link:hover {
-	color: rgb(91, 16, 53);
+	background-color: rgba(237, 17, 17, 1);
 }
 
