--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -248,6 +248,7 @@ canvas {
 
 .make-center {
   height: 480px;
+  margin: 0 auto;
 }
 
 .popup {
@@ -257,6 +258,7 @@ canvas {
   top: 0;
   width: 99.5vw;
   height: 100%;
+  background-color: rgba(32,112,132,0.5);
   box-shadow: 0 -20px 150px -20px rgba(0, 0, 0, 0.5);
   z-index: 200;
 }
