--- a/src/style/broadcaster.css
+++ b/src/style/broadcaster.css
@@ -10,8 +10,18 @@
 }
 
 .video-container {
+  display: block;
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
-  width: 40%;
+  margin: 0 auto;
+  width: 100%;
+  height: 30%;
+}
+
+.media-elements {
+  display: flex;
+  flex-wrap: wrap;
+  height: 400px;
+  align-content: space-between;
 }
