--- a/src/style/broadcaster.css
+++ b/src/style/broadcaster.css
@@ -25,3 +25,14 @@
   height: 400px;
   align-content: space-between;
 }
+
+.dragging{
+  position: absolute;
+  background-color: green;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  -ms-user-select: none;
+  -khtml-user-select: none;
+  user-select: none;
+}
