--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -55,8 +55,10 @@ canvas {
     -ms-flex-direction: column;
     flex-direction: column;
     height: 100vmin;
-  	max-width: 99vw;
-  	max-height: 100vh;
+    border-radius: 8px;
+    border: solid peru 10px;
+    max-width: 100%;
+    max-height: 100%;
 }
 
 /* Scroll bars */
