--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -286,6 +286,33 @@ canvas {
   border-radius: 20px;
 }
 
+button:focus {outline:0;}
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none; /* Non-prefixed version, currently
+                        supported by Chrome and Opera */
+}
+
+.leftPanelUni {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  margin: auto 0;
+  padding: 0;
+  width: 20%;
+  height: 100%;
+  box-shadow: 0px 20px 70px -20px rgba(0, 0, 0, 0.8);
+  border-radius: 20px;
+  font-size: 80%;
+}
+
 .container:after{
   content: '';
   display: inline-block;
