--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -176,11 +176,12 @@ canvas {
   height: 35px;
 }
 
-.hide-user-profile {
+#user-profile-btn-ok {
   position: absolute;
-  width: 20%;
+  width: 10%;
   bottom: 0;
   left: 40%;
+  z-index: 1000;
 }
 
 .myButton {
@@ -421,7 +422,7 @@ button:focus {outline:0;}
   border: 2px solid transparent;
   outline: none;
   border-radius: 1.5rem;
-  background-color: rgba(255, 255, 255, 0.25);
+  background-color: rgb(169, 11, 13);
   letter-spacing: 1px;
 }
 
