Multiplayer feature part 1 [WIP]
   Initialisation netPlayer on signaling start.
   adding  net Bodies array  ...

--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -123,6 +123,8 @@ canvas {
   height: 84% !important;
   width: 100%;
   overflow: auto;
+  opacity: 0.7;
+  background: rgba(2,2,222,0.2);
 }
 
 .log-sender {
