--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -109,6 +109,55 @@ canvas {
   animation-duration: 2s;
 }
 
+.message-box {
+  position: absolute;
+  background: black;
+  padding: 20px;
+  opacity: 1;
+  z-index: 1500000;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  -webkit-animation-name: autohide; /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 2s; /* Safari 4.0 - 8.0 */
+  animation-name: autohide;
+  animation-duration: 2s;
+}
+
+.message-box-content {
+  text-align: center;
+}
+
+.message-box-hide-animation {
+  -webkit-animation-name: scaleToCenter;
+  -webkit-animation-duration: 1.2s;
+  animation-name: scaleToCenter;
+  animation-duration: 1.2s;
+}
+
+.message-box-show-animation {
+  -webkit-animation-name: scaleFromCenter;
+  -webkit-animation-duration: 1.2s;
+  animation-name: scaleFromCenter;
+  animation-duration: 1.2s;
+}
+
+.message-box-btn {
+  position: absolute;
+  color: #ffffff;
+  bottom: 10px;
+  font-family: Impact, sans-serif;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+  padding: .75rem;
+  display: flow-root;
+  width: 100%;
+  background-color: rgba(237, 17, 17, 0.75);
+  border: none;
+  cursor: pointer;
+}
+
 .logger {
   position: absolute;
   left: 0;
