--- a/src/style/getHTMLMediaElement.css
+++ b/src/style/getHTMLMediaElement.css
@@ -4,7 +4,8 @@ MIT License   - www.WebRTC-Experiment.com/licence
 Documentation - github.com/muaz-khan/WebRTC-Experiment/tree/master/getMediaElement
 */
 
-.media-container, .media-container * {
+.media-container,
+.media-container * {
     margin: 0;
     padding: 0;
     -webkit-user-select: none;
@@ -13,7 +14,8 @@ Documentation - github.com/muaz-khan/WebRTC-Experiment/tree/master/getMediaEleme
     user-select: none;
 }
 
-.media-container, .media-container * {
+.media-container,
+.media-container * {
     -moz-transition: all .5s ease-in-out;
     -ms-transition: all .5s ease-in-out;
     -o-transition: all .5s ease-in-out;
@@ -33,11 +35,12 @@ Documentation - github.com/muaz-khan/WebRTC-Experiment/tree/master/getMediaEleme
 
 .media-box {
     background: black;
-    border: 1px solid rgb(107, 107, 107);
+    border: 1px solid rgb(29, 146, 200);
     margin: 1px;
 }
 
-.media-controls, .volume-control {
+.media-controls,
+.volume-control {
     margin-top: 2px;
     position: absolute;
     margin-left: 5px;
@@ -45,7 +48,8 @@ Documentation - github.com/muaz-khan/WebRTC-Experiment/tree/master/getMediaEleme
     opacity: 0;
 }
 
-.media-controls .control, .volume-control .control {
+.media-controls .control,
+.volume-control .control {
     width: 35px;
     height: 35px;
     background-position: center center;
@@ -62,11 +66,15 @@ Documentation - github.com/muaz-khan/WebRTC-Experiment/tree/master/getMediaEleme
     border-top-left-radius: 5px;
 }
 
-.media-controls .control:hover, .media-controls .selected, .volume-control .control:hover {
+.media-controls .control:hover,
+.media-controls .selected,
+.volume-control .control:hover {
     background-color: rgba(255, 255, 255, 0.74);
 }
 
-.media-controls .control:active, .media-container .selected, .volume-control .control:active {
+.media-controls .control:active,
+.media-container .selected,
+.volume-control .control:active {
     background-color: rgba(255, 255, 255, 0.44)!important;
 }
 
@@ -128,14 +136,16 @@ Documentation - github.com/muaz-khan/WebRTC-Experiment/tree/master/getMediaEleme
     height: 5em;
 }
 
-.volume-control .volume-slider, .media-controls .volume-slider {
+.volume-control .volume-slider,
+.media-controls .volume-slider {
     width: auto;
     background: rgba(255, 255, 255, 0.09)!important;
     border: 1px solid white;
     height: 33px;
 }
 
-.volume-control .volume-slider input[type=range] , .media-controls .volume-slider  input[type=range] {
+.volume-control .volume-slider input[type=range],
+.media-controls .volume-slider input[type=range] {
     margin-top: 9px;
     height: 15px;
     outline: none;
