--- a/src/style/broadcaster.css
+++ b/src/style/broadcaster.css
@@ -1,38 +1,97 @@
-
 .room-section {
-  background: deepskyblue;
-  min-height: 400px;
+    background: deepskyblue;
+    min-height: 400px;
 }
 
 .broadcaster {
-  width:80%;
-  margin: 0 auto;
+    position: absolute;
+    height: 100%;
+    right: 0;
+    width: 20%;
+    margin: 0 auto;
 }
 
 .video-container {
-  display: block;
-  position: absolute;
-  top: 50px;
-  left: 0;
-  margin: 0 auto;
-  width: 35%;
-  height: auto;
+    display: block;
+    position: absolute;
+    top: 50px;
+    left: 0;
+    margin: 0 auto;
+    width: 35%;
+    height: auto;
 }
 
 .media-elements {
-  display: flex;
-  flex-wrap: wrap;
-  height: 400px;
-  align-content: space-between;
+    display: flex;
+    flex-wrap: wrap;
+    height: 400px;
+    align-content: space-between;
 }
 
-.dragging{
-  position: absolute;
-  background-color: green;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -o-user-select: none;
-  -ms-user-select: none;
-  -khtml-user-select: none;
-  user-select: none;
+.dragging {
+    position: absolute;
+    background-color: green;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -o-user-select: none;
+    -ms-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
+}
+
+.urlBox {
+    text-align: center;
+    display: none;
+    background: #F1EDED;
+    margin: 15px -10px;
+    border: 1px solid rgb(189, 189, 189);
+    border-left: 0;
+    border-right: 0;
+}
+
+.make-fill {
+  width: 100%;
+  height:100%;
+}
+
+.blue-button {
+	color: #ffffff;
+	font-size: 18px;
+	font-family: Impact, sans-serif;
+	text-transform: uppercase;
+	letter-spacing: 1px;
+	margin-top: 1rem;
+	padding: .75rem;
+	display: block;
+	width: 100%;
+	background-color: rgba(19, 102, 180, 0.945);
+	border: none;
+	cursor: pointer;
+}
+
+.blue-button:hover {
+ background-color: rgba(237, 17, 17, 1);
+}
+
+.red-link {
+  display: block;
+  text-align: center;
+  color:white;
+  background-color: rgba(237, 17, 17, 0.75);
+  font-size: 16px;
+  text-decoration: none;
+  position: relative;
+  z-index: 1;
+}
+
+.broadcastLabel:disabled {
+  background: #462d2d;
+}
+
+.broadcastLabel:hover {
+  background-color: rgba(237, 17, 17, 1);
+}
+
+.broadcastLabel:hover:disabled {
+  background: #4b2323;
 }
