--- a/src/style/animations.css
+++ b/src/style/animations.css
@@ -95,24 +95,23 @@
 
 /* bounceIn */
 .bounceIn {
+  border: none;
   -webkit-animation-name: bounceIn;
   animation-name: bounceIn;
   -webkit-animation-duration: .75s;
   animation-duration: .75s;
   -webkit-animation-duration: 1s;
-  animation-duration: 1s infinite;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  animation-play-state: paused;
-}
-.bounceIn:hover {
-  /* Toggle our animation play state to running when we are hovering over our sticker */
+  animation-duration: 1s;
+  animation-iteration-count: 1;
+  -webkit-animation-fill-mode: none;
+  animation-fill-mode: none;
   animation-play-state: running;
 }
-.bounceIn:hoverOut {
-  /* Toggle our animation play state to running when we are hovering over our sticker */
-  animation-play-state: paused;
+
+div.bounceIn:hover {
+  border: solid red 1px;
 }
+
 @-webkit-keyframes bounceIn {
 0%, 20%, 40%, 60%, 80%, 100% {
   -webkit-transition-timing-function: cubic-bezier(0.215, 0.610, 0.355, 1.000);
