--- a/src/style/broadcaster.css
+++ b/src/style/broadcaster.css
@@ -118,15 +118,17 @@
 }
 
 .broadcastLabel:disabled {
-  background-color: #112c42;
+  background-color: #444444;
 }
 
 .broadcastLabel:hover {
   background-color: rgba(19, 102, 170, 0.9);
+  color: rgba(0, 0, 0, 0.9);
 }
 
 .broadcastLabel:hover:disabled {
-  background: #4b2323;
+  background-color: rgba(19, 102, 170, 0.9);
+  color: rgba(233, 21, 21, 0.9);
 }
 
 .red-link {
@@ -140,15 +142,15 @@
   z-index: 1;
 }
 
-.popup-left-box {
+.popup-right-box {
   position: absolute;
   margin: 0;
-  left : 70%;
+  left : 80%;
   top: 0;
-  width: 30vw;
+  width: 23vw;
   height: 100%;
-  background-color: rgba(1,55,232,0.95);
-  box-shadow: 0 -20px 150px -20px rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.95);
+  box-shadow: 0 -20px 150px -20px rgba(8, 81, 163, 0.5);
   z-index: 200;
 }
 
