Replace multiRTC2 WIP
 Still no stable  real time handling in coordinator part. Coordinator is displaced for multiRTC2 used for data stream and active navigation player or any other object.

--- a/src/style/broadcaster.css
+++ b/src/style/broadcaster.css
@@ -10,6 +10,13 @@
   margin: 0 auto;
 }
 
+.coordinator {
+  position: absolute;
+  height: 100%;
+  width: 35%;
+  left: 0;
+}
+
 .video-container {
   display: block;
   position: absolute;
