--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -25,7 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 
 body {
-  font: 14px/20px Impact, Helvetica, Arial, sans-serif;
+  font: 14px/20px Helvetica, Arial, sans-serif;
   color: lime;
   margin: 0;
   padding: 0;
@@ -36,7 +36,7 @@ body {
 
 * {
   box-sizing: border-box;
-  font-family: Impact, Arial;
+  font-family: Arial;
 }
 
 .hide {
@@ -202,7 +202,6 @@ canvas {
   position: absolute;
   color: #ffffff;
   bottom: 10px;
-  font-family: Impact, sans-serif;
   text-transform: uppercase;
   margin-bottom: 10px;
   padding: .75rem;
@@ -316,7 +315,7 @@ canvas {
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family: Impact, Arial;
+	font-family: Arial;
 	font-size:17px;
 	padding:5px 33px;
   text-decoration:none;
@@ -333,7 +332,7 @@ canvas {
 	display:inline-block;
 	cursor:pointer;
 	color:#ffffff;
-	font-family: Impact, Arial;
+	font-family: Arial;
 	font-size:17px;
 	padding:5px 33px;
   text-decoration:none;
@@ -454,7 +453,7 @@ button:focus {outline:0;}
   z-index: 10;
   margin: auto 0;
   padding: 0;
-  width: 20%;
+  width: 16%;
   height: 100%;
   box-shadow: 0px 20px 70px -20px rgba(0, 0, 0, 0.8);
   border-radius: 20px;
@@ -595,7 +594,6 @@ button:focus {outline:0;}
 .login-button {
 	color: #ffffff;
 	font-size: 18px;
-	font-family: Impact, sans-serif;
 	text-transform: uppercase;
 	letter-spacing: 1px;
 	margin-top: 1rem;
