--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -1,16 +1,84 @@
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -19,8 +87,17 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
@@ -29,8 +106,8 @@ footer, header, hgroup, menu, nav, section {
   src: url('../fonts/stormfaze.ttf');
   src: url('../fonts/stormfaze.eot');
   src: url('../fonts/stormfaze.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/stormfaze.woff2') format('woff2'),
-      url('../fonts/stormfaze.woff') format('woff');
+    url('../fonts/stormfaze.woff2') format('woff2'),
+    url('../fonts/stormfaze.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -41,8 +118,8 @@ footer, header, hgroup, menu, nav, section {
   src: url('../fonts/wargames.ttf');
   src: url('../fonts/wargames.eot');
   src: url('../fonts/wargames.eot?#iefix') format('embedded-opentype'),
-      url('../fonts/wargames.woff2') format('woff2'),
-      url('../fonts/wargames.woff') format('woff');
+    url('../fonts/wargames.woff2') format('woff2'),
+    url('../fonts/wargames.woff') format('woff');
 }
 
 body {
@@ -50,8 +127,8 @@ body {
   color: white;
   margin: 0;
   padding: 0;
-  border:none;
-  background-color:black;
+  border: none;
+  background-color: black;
   overflow: hidden;
   font-size: 14px;
 }
@@ -62,43 +139,43 @@ body {
 }
 
 .hide {
-  display:none;
+  display: none;
 }
 
 canvas {
-    margin:0 auto;
-    font-family: Impact, Helvetica, Arial, sans-serif;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    background: #14151f;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    height: 100vmin;
-    border-radius: 8px;
-    border: solid peru 10px;
-    max-width: 100%;
-    max-height: 100%;
+  margin: 0 auto;
+  font-family: Impact, Helvetica, Arial, sans-serif;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  background: #14151f;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 100vmin;
+  border-radius: 8px;
+  border: solid peru 10px;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 /* Scroll bars */
 /* width */
 ::-webkit-scrollbar {
-    width: 20px;
+  width: 20px;
 }
 
 /* Track */
 ::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 6px;
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 6px;
 }
 
 /* Handle */
@@ -114,8 +191,8 @@ canvas {
 
 #msgbox {
   position: absolute;
-  top:15%;
-  left:30%;
+  top: 15%;
+  left: 30%;
   width: 40%;
   height: 50%;
   text-align: center;
@@ -129,8 +206,10 @@ canvas {
   right: 0%;
   width: 20%;
   height: 100%;
-  -webkit-animation-name: autohide; /* Safari 4.0 - 8.0 */
-  -webkit-animation-duration: 2s; /* Safari 4.0 - 8.0 */
+  -webkit-animation-name: autohide;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 2s;
+  /* Safari 4.0 - 8.0 */
   animation-name: autohide;
   animation-duration: 2s;
 }
@@ -141,8 +220,10 @@ canvas {
   left: 0;
   width: 100%;
   height: 100%;
-  -webkit-animation-name: autohide; /* Safari 4.0 - 8.0 */
-  -webkit-animation-duration: 2s; /* Safari 4.0 - 8.0 */
+  -webkit-animation-name: autohide;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 2s;
+  /* Safari 4.0 - 8.0 */
   animation-name: autohide;
   animation-duration: 2s;
 }
@@ -193,8 +274,10 @@ canvas {
   top: 0;
   width: 100%;
   height: 100%;
-  -webkit-animation-name: autohide; /* Safari 4.0 - 8.0 */
-  -webkit-animation-duration: 2s; /* Safari 4.0 - 8.0 */
+  -webkit-animation-name: autohide;
+  /* Safari 4.0 - 8.0 */
+  -webkit-animation-duration: 2s;
+  /* Safari 4.0 - 8.0 */
   animation-name: autohide;
   animation-duration: 2s;
   font-size: normal;
@@ -250,14 +333,14 @@ canvas {
   width: 100%;
   overflow: auto;
   opacity: 0.7;
-  background: rgba(2,2,222,0.2);
+  background: rgba(2, 2, 222, 0.2);
 }
 
 .log-sender {
-  position:absolute;
-  bottom:10%;
-  left:0;
-  width:64%;
+  position: absolute;
+  bottom: 10%;
+  left: 0;
+  width: 64%;
   z-index: 100;
 }
 
@@ -313,7 +396,7 @@ canvas {
 .icon {
   width: 45px;
   height: 45px;
-  vertical-align:bottom !important;
+  vertical-align: bottom !important;
 }
 
 .chatIcon {
@@ -332,62 +415,64 @@ canvas {
 }
 
 .myButton {
-	background-color:#d41111;
-	border:1px solid #9412219b;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family: stormfaze;
-	font-size:14px;
-	padding:5px 33px;
-  text-decoration:none;
+  background-color: #d41111;
+  border: 1px solid #9412219b;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: stormfaze;
+  font-size: 14px;
+  padding: 5px 33px;
+  text-decoration: none;
   outline: none;
 }
+
 .myButton:hover {
-  background-color:#ffffff;
-  color:#d41111;
+  background-color: #ffffff;
+  color: #d41111;
 }
 
 .myButtonChat {
-	background-color:transparent;
-	border:1px solid #9412219b;
-	display:inline-block;
-	cursor:pointer;
-	color:#ffffff;
-	font-family: stormfaze;
-	font-size:14px;
-	padding:5px 33px;
-  text-decoration:none;
+  background-color: transparent;
+  border: 1px solid #9412219b;
+  display: inline-block;
+  cursor: pointer;
+  color: #ffffff;
+  font-family: stormfaze;
+  font-size: 14px;
+  padding: 5px 33px;
+  text-decoration: none;
   outline: none;
 }
 
 .myButtonChat:hover {
-  background-color:rgba(123,12,33,0.3);
-  color:#d41111;
+  background-color: rgba(123, 12, 33, 0.3);
+  color: #d41111;
 }
 
 .myError {
   display: none;
-	-moz-box-shadow: 0px 0px 11px 3px darkred;
-	-webkit-box-shadow: 0px 0px 11px 3px darkred;
-	box-shadow: 0px 0px 11px 3px darkred;
-	background-color:darkred;
-	-moz-border-radius:28px;
-	-webkit-border-radius:28px;
-	border-radius:28px;
-	border:1px solid red;
-	cursor:pointer;
-	color:lightcoral;
-	font-family: Impact, Arial;
-	font-size:14px;
-	padding:5px 33px;
-	text-decoration:none;
-  text-shadow:0px 1px 8px #14151f;
+  -moz-box-shadow: 0px 0px 11px 3px darkred;
+  -webkit-box-shadow: 0px 0px 11px 3px darkred;
+  box-shadow: 0px 0px 11px 3px darkred;
+  background-color: darkred;
+  -moz-border-radius: 28px;
+  -webkit-border-radius: 28px;
+  border-radius: 28px;
+  border: 1px solid red;
+  cursor: pointer;
+  color: lightcoral;
+  font-family: Impact, Arial;
+  font-size: 14px;
+  padding: 5px 33px;
+  text-decoration: none;
+  text-shadow: 0px 1px 8px #14151f;
   width: 100%;
 }
+
 .myError:hover {
-  background-color:lightcoral;
-  color:white;
+  background-color: lightcoral;
+  color: white;
 }
 
 #allow-webcam {
@@ -433,16 +518,16 @@ canvas {
 .popup {
   position: absolute;
   margin: 0;
-  left : 0;
+  left: 0;
   top: 0;
   width: 99.5vw;
   height: 100%;
-  background-color: rgba(32,112,132,0.5);
+  background-color: rgba(32, 112, 132, 0.5);
   box-shadow: 0 -20px 150px -20px rgba(0, 0, 0, 0.5);
   z-index: 200;
 }
 
- .container {
+.container {
   display: block;
   position: relative;
   z-index: 0;
@@ -455,15 +540,23 @@ canvas {
   border-radius: 20px;
 }
 
-button:focus {outline:0;}
+button:focus {
+  outline: 0;
+}
 
 .noselect {
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
+  -webkit-touch-callout: none;
+  /* iOS Safari */
+  -webkit-user-select: none;
+  /* Safari */
+  -khtml-user-select: none;
+  /* Konqueror HTML */
+  -moz-user-select: none;
+  /* Firefox */
+  -ms-user-select: none;
+  /* Internet Explorer/Edge */
+  user-select: none;
+  /* Non-prefixed version, currently
                         supported by Chrome and Opera */
 }
 
@@ -501,7 +594,7 @@ button:focus {outline:0;}
   position: relative;
   z-index: 1;
   padding: 5% 1% 4% 1%;
-  border-bottom: 1px solid rgba(255,255,255, 0.25);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
   font-size: 15px;
 }
 
@@ -511,14 +604,14 @@ button:focus {outline:0;}
   text-align: center;
   z-index: 1;
   padding: 1% 1% 4% 1%;
-  border-bottom: 1px solid rgba(255,255,255, 0.25);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
   font-size: 15px;
 }
 
 .nav {
-    position: relative;
-    padding: 0;
-    margin: 0 0 2em 1rem;
+  position: relative;
+  padding: 0;
+  margin: 0 0 2em 1rem;
 }
 
 .nav-item {
@@ -526,7 +619,7 @@ button:focus {outline:0;}
   display: inline-block;
 }
 
-.nav-item + .nav-item{
+.nav-item+.nav-item {
   margin-left: 2.25rem;
 }
 
@@ -541,12 +634,13 @@ button:focus {outline:0;}
   transition: .20s all ease;
 }
 
-.nav-item.active a, .nav-item a:hover{
+.nav-item.active a,
+.nav-item a:hover {
   color: #FFFFFF;
   transition: .15s all ease;
 }
 
-.nav-item a:after{
+.nav-item a:after {
   content: '';
   display: inline-block;
   height: 10px;
@@ -559,7 +653,8 @@ button:focus {outline:0;}
   transition: .15s all ease;
 }
 
-.nav-item a:hover:after, .nav-item.active a:after{
+.nav-item a:hover:after,
+.nav-item.active a:after {
   background-color: rgb(208, 183, 181);
   height: 2px;
   right: 0;
@@ -568,14 +663,15 @@ button:focus {outline:0;}
   transition: .20s all ease;
 }
 
-.form-label, .form-checkbox-label{
+.form-label,
+.form-checkbox-label {
   color: rgba(255, 255, 255, 0.5);
   text-transform: uppercase;
   font-size: 12px;
   margin-bottom: 1rem;
 }
 
-.form-checkbox-label{
+.form-checkbox-label {
   display: inline-block;
   position: relative;
   padding-left: 1.5rem;
@@ -586,7 +682,7 @@ button:focus {outline:0;}
   text-transform: inherit;
 }
 
-.form-input-text{
+.form-input-text {
   color: white;
   font-size: 1.15rem;
   width: 100%;
@@ -599,49 +695,49 @@ button:focus {outline:0;}
 }
 
 .form-input-text:hover,
-.form-input-text:focus{
-	color: white;
-	border: 2px solid rgba(255, 255, 255, 0.5);
-	background-color: transparent;
+.form-input-text:focus {
+  color: white;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  background-color: transparent;
 }
 
-.form-input-text + .form-label {
-	margin-top: 1.5rem;
+.form-input-text+.form-label {
+  margin-top: 1.5rem;
 }
 
 .form-input-checkbox {
-	position: absolute;
-	top: .1rem;
-	left: 0;
-	margin: 0;
+  position: absolute;
+  top: .1rem;
+  left: 0;
+  margin: 0;
 }
 
 .login-button {
-	color: #ffffff;
-	font-size: 14px;
-	text-transform: uppercase;
-	letter-spacing: 1px;
-	margin-top: 1rem;
-	padding: .75rem;
-	display: block;
-	width: 100%;
-	background-color: rgba(237, 17, 17, 0.75);
-	border: none;
-	cursor: pointer;
+  color: #ffffff;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-top: 1rem;
+  padding: .75rem;
+  display: block;
+  width: 100%;
+  background-color: rgba(237, 17, 17, 0.75);
+  border: none;
+  cursor: pointer;
 }
 
 .login-button:hover {
-	background-color: rgba(237, 17, 17, 1);
+  background-color: rgba(237, 17, 17, 1);
 }
 
 .link {
-	display: block;
-	text-align: center;
-  color:white;
+  display: block;
+  text-align: center;
+  color: white;
   background-color: rgba(237, 17, 17, 0.75);
-	text-decoration: none;
-	position: relative;
-	z-index: 1;
+  text-decoration: none;
+  position: relative;
+  z-index: 1;
 }
 
 .link:disabled {
@@ -649,7 +745,7 @@ button:focus {outline:0;}
 }
 
 .link:hover {
-	background-color: rgba(237, 17, 17, 1);
+  background-color: rgba(237, 17, 17, 1);
 }
 
 .link:hover:disabled {
@@ -661,15 +757,16 @@ button:focus {outline:0;}
 }
 
 .selectPlayerBox {
-  width:30%;display:inline-block;
-  cursor:pointer;
-  text-align:center;
+  width: 30%;
+  display: inline-block;
+  cursor: pointer;
+  text-align: center;
   padding: 9px;
   border-radius: 10px;
 }
 
-.selectPlayerBox:hover{
-  color:blanchedalmond;
+.selectPlayerBox:hover {
+  color: blanchedalmond;
 }
 
 .player-board {
@@ -684,14 +781,21 @@ button:focus {outline:0;}
 
 @media only screen and (max-width: 768px) {
 
-  
-.player-board {
-  display: flex;
-  flex-direction: row;
-}
+  .popup-right-box{
+    left: 0;
+    width: 100%;
+  }
+
+  .videos-container{
+    top: -1300px;
+  }
+
+  .player-board {
+    display: flex;
+    flex-direction: row;
+  }
 
   .form-app {
-    width: 35%;
     min-width: 150px;
   }
 
@@ -699,7 +803,9 @@ button:focus {outline:0;}
     max-width: 100%;
   }
 
-  .login-button {  font-size: small; }
+  .login-button {
+    font-size: small;
+  }
 
   .leftPanelUni {
     display: block;
