--- a/src/style/broadcaster.css
+++ b/src/style/broadcaster.css
@@ -30,7 +30,7 @@
 .media-elements {
   display: flex;
   flex-wrap: wrap;
-  height: 400px;
+  /* height: 400px; */
   align-content: space-between;
 }
 
