--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -161,7 +161,7 @@ canvas {
   flex-direction: column;
   height: 100vmin;
   border-radius: 8px;
-  border: solid peru 10px;
+  /* border: solid peru 10px; */
   max-width: 100%;
   max-height: 100%;
 }
@@ -621,7 +621,7 @@ button:focus {
 }
 
 .nav-item+.nav-item {
-  margin-left: 2.25rem;
+  /* margin-left: 2.25rem; */
 }
 
 .nav-item a {
