--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -409,13 +409,16 @@ canvas {
   position: relative;
   bottom: 0;
   z-index: 100;
+  height: 60px;
   text-align: center;
 
   @media only screen and (min-width: 1024px) {
+    padding-top: 0;
     position: absolute;
     width: 10%;
     min-width: 200px;
     left: 40%;
+    height: 35px;
   }
 }
 
@@ -741,6 +744,24 @@ button:focus {
   background-color: rgba(237, 17, 17, 1);
 }
 
+.ui-button {
+  color: #ffffff;
+  font-size: 14px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: .25rem;
+  display: block;
+  width: 100%;
+  background-color: rgba(237, 17, 17, 0.75);
+  border: none;
+  cursor: pointer;
+  text-shadow: 0px 0px 2px rgb(0, 0, 0);
+}
+
+.ui-button:hover {
+  background-color: rgba(237, 17, 17, 1);
+}
+
 .link {
   display: block;
   text-align: center;
@@ -784,7 +805,14 @@ button:focus {
   display: flex;
   flex-direction: column;
   margin: 0;
-  height: inherit;
+  height: unset;
+
+  @media only screen and (max-width: 768px) {
+    display: flex;
+    flex-direction: row;
+    height: 60px !important;
+  }
+
 }
 
 
@@ -799,11 +827,6 @@ button:focus {
 
   .videos-container{
     top: -1300px;
-  }
-
-  .player-board {
-    display: flex;
-    flex-direction: row;
   }
 
   .form-app {
