--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -409,9 +409,9 @@ canvas {
   position: relative;
   bottom: 0;
   z-index: 100;
-  height: 60px;
+  /* height: 60px; */
   text-align: center;
-
+  border-radius: 4px;
   @media only screen and (min-width: 1024px) {
     padding-top: 0;
     position: absolute;
@@ -528,7 +528,7 @@ canvas {
   margin: 0;
   left: 0;
   top: 0;
-  width: 99.5vw;
+  width: 100vw;
   height: 100%;
   background-color: rgba(32, 112, 132, 0.5);
   box-shadow: 0 -20px 150px -20px rgba(0, 0, 0, 0.5);
@@ -610,6 +610,8 @@ button:focus {
   padding: 5% 1% 4% 1%;
   border-bottom: 1px solid rgba(255, 255, 255, 0.25);
   font-size: 15px;
+
+  height: 455px;
 }
 
 .form-selectplayer {
@@ -706,6 +708,7 @@ button:focus {
   border-radius: 0.2rem;
   background-color: rgb(169, 11, 13);
   letter-spacing: 1px;
+  border-radius: 4px;
 }
 
 .form-input-text:hover,
@@ -813,6 +816,9 @@ button:focus {
     height: 60px !important;
   }
 
+  @media only screen and (max-height: 468px) {
+    height: 23px !important;
+  }
 }
 
 
@@ -855,5 +861,23 @@ button:focus {
     box-shadow: 0px 20px 70px -20px rgb(0 0 0 / 80%);
     border-radius: 20px;
     font-size: 14px;
+  }
+}
+
+@media only screen and (max-height: 468px) {
+  .form-app {
+    padding: 0;
+  }
+
+  .nav {
+    margin: 0 0 1em 1rem;
+  }
+
+  .form-input-text{
+    padding: 0.3rem 1rem;
+  }
+
+  .container {
+    margin: 0;
   }
 }
